[gd_scene load_steps=17 format=3 uid="uid://bw3m3mutdqjbd"]

[ext_resource type="Script" path="res://Scripts/CheckPoints/checkpoint.gd" id="1_p0xf2"]
[ext_resource type="Texture2D" uid="uid://533onyyb0lnt" path="res://Assets/Graphics/Checkpoint/mountain_checkpoint.png" id="2_h05e8"]
[ext_resource type="Texture2D" uid="uid://cgry7kaq3rrra" path="res://Assets/Graphics/Checkpoint/mountain_checkpointlit.png" id="3_0pklt"]
[ext_resource type="Texture2D" uid="uid://ngkeeouv5yof" path="res://Assets/Graphics/Lightmaps/neutralPoint.webp" id="4_h8rcd"]
[ext_resource type="Script" path="res://Scripts/Player/Visuals/PlayerSpotlight.gd" id="5_dhpy1"]
[ext_resource type="Texture2D" uid="uid://bh4ifsauhlnhp" path="res://Assets/Graphics/Particles/Star1.png" id="6_s0lhl"]
[ext_resource type="AudioStream" uid="uid://dltcpm20f25wk" path="res://Assets/SFX/Player/Glow/fire_lit.mp3" id="7_ryu0h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_500oe"]
size = Vector2(15, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_txwab"]
atlas = ExtResource("2_h05e8")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_akvq7"]
atlas = ExtResource("3_0pklt")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkcj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_txwab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_akvq7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Curve" id="Curve_ujyhx"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 1.4, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0g3ch"]
_data = [Vector2(0, 0), 0.0, 1.4, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_0dgg6"]
_data = [Vector2(0, 0.651897), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.0963558, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_o7rym"]
offsets = PackedFloat32Array(0.9, 0.995763)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)
metadata/_snap_enabled = true

[sub_resource type="Curve" id="Curve_xfwur"]
_data = [Vector2(0.6, 0.2), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2
metadata/_snap_enabled = true

[node name="CheckpointArea" type="Area2D"]
z_index = -1
collision_layer = 68
script = ExtResource("1_p0xf2")
blend_priority = 0
blend_override = 0.15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_500oe")

[node name="CheckpointSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_kkcj3")

[node name="Spotlight" type="PointLight2D" parent="."]
color = Color(0.890196, 0.921569, 0.34902, 1)
energy = 0.6
range_layer_min = -99
range_item_cull_mask = 3
shadow_enabled = true
shadow_color = Color(0, 0, 0, 1)
shadow_filter = 2
shadow_filter_smooth = 10.0
shadow_item_cull_mask = 2
texture = ExtResource("4_h8rcd")
script = ExtResource("5_dhpy1")
curve_in = SubResource("Curve_ujyhx")
curve_out = SubResource("Curve_0g3ch")
metadata/_edit_lock_ = true

[node name="explode" type="CPUParticles2D" parent="."]
position = Vector2(0, -11)
emitting = false
amount = 14
one_shot = true
explosiveness = 0.95
texture = ExtResource("6_s0lhl")
direction = Vector2(0, -1)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 50.0
angular_velocity_min = -10.0
angular_velocity_max = 10.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
damping_min = 1.0
damping_max = 1.0
angle_max = 90.0
scale_amount_min = 0.2
scale_amount_max = 0.9
scale_amount_curve = SubResource("Curve_0dgg6")
color = Color(0.890196, 0.921569, 0.34902, 1)
color_ramp = SubResource("Gradient_o7rym")

[node name="lightparticles" type="CPUParticles2D" parent="."]
z_index = -1
position = Vector2(0, -9)
emitting = false
lifetime = 0.6
speed_scale = 0.75
texture = ExtResource("6_s0lhl")
emission_shape = 3
emission_rect_extents = Vector2(6, 1)
gravity = Vector2(0, -100)
angular_velocity_min = -61.06
angular_velocity_max = 152.98
angle_min = -45.0
angle_max = 45.0
scale_amount_min = 0.51
scale_amount_max = 1.5
scale_amount_curve = SubResource("Curve_xfwur")
color = Color(0.890196, 0.921569, 0.34902, 1)

[node name="CheckPointLit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ryu0h")
bus = &"SFX"

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="child_exiting_tree" from="." to="." method="_on_child_exiting_tree"]
